# reGB

./: README.md
codegen/: README.md  pyproject.toml
codegen/codegen/: __main__.py  template
src/CPU/: backend.c
