[project]
name = "codegen"
version = "0.2.0"
description = "A Script for generating handlers for Gameboy CPU Instructions in C."
authors = [
    {name = "Nova",email = "mooncell07@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
